# module-graphic-ogre-win64

./: .gitignore  .travis.yml  README.md  bitbucket-pipelines.yml  deploy-maven-central.sh  pom.xml
src/main/scripts/win64/: CMakeLists.txt  build.bat  build.sh
